# OpenAgentTelemetry

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  docker-build.yml
apps/sdk-python/: pyproject.toml
apps/sdk-python/src/oat/: __init__.py  client.py  context.py  traceable.py
apps/sdk-python/src/oat/integrations/: __init__.py  langchain.py
apps/sdk-ts/: package.json
apps/sdk-ts/src/: client.ts  context.ts  index.ts  (+1 more)
apps/server/: Dockerfile  drizzle.config.ts  package.json
apps/web/: Dockerfile  Dockerfile.prod  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docs/: README.md
docs/plans/: 2026-07-09-m1-skeleton.md  2026-07-09-m2-m3-tracing-eval.md  2026-07-09-m5-dashboard-stats.md  2026-07-09-m6-admin-auth.md  2026-07-12-m7-python-sdk.md  2026-07-12-m8-alerting.md  2026-07-12-m9-auth-frontend-skeleton.md  2026-07-13-m10-security-hardening.md  2026-07-13-m11-m12-audit-realtime.md  2026-07-13-m13-eval-jobs.md
docs/research/: 01-ai-agent-observability-platform-research.md
docs/specs/: 2026-07-09-auth-dashboard-design.md  2026-07-09-openagenttelemetry-platform-design.md  2026-07-12-m9-auth-frontend-skeleton-design.md  2026-07-12-python-sdk-alerting-design.md  2026-07-13-m10-security-hardening-design.md  2026-07-13-m11-m12-audit-realtime-design.md  2026-07-13-m13-eval-jobs-design.md
scripts/: e2e-test.ts  seed.ts  verify-m10.sh  verify-m11-m12.sh  verify-m13.sh  verify-m9.sh  verify-python-sdk.py  verify-sdk.ts
(+110 files in other folders)
